# kamma

./: .gitignore  README.md  copy.sh  install.ps1  install.sh  justfile  pyproject.toml  sync.sh
commands/: 0-setup.md  1-plan.md  2-do.md  3-review.md  4-finalize.md  5-status.md  fix.md  good-night.md  handoff.md  history-review.md  kamma.md  one-shot.md  status.md
docs/plans/: 2026-04-01-finalize-command.md  2026-04-01-review-command-split.md  2026-04-01-status-command-rename.md  2026-04-07-issue-number-propagation-design.md  2026-04-07-issue-number-propagation.md
kammika/: pyproject.toml
kammika/kammika/: __main__.py  agents.py  config.py  paths.py  ui.py
kammika/kammika/commands/: init.py  run.py  triage.py
kammika/kammika/tests/: test_agents.py  test_run_agents.py  test_triage_rank.py
registration/: GEMINI.md  QWEN.md  claude-plugin.json  gemini-extension.json  qwen-extension.json
scripts/: sync.py
skills/kamma/: SKILL.md
templates/: workflow.md
